just planning fixed

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@ type: home
     <div class="centered-content">
       <div class="avatar">{% include avatar.html %}</div>
 
-      <h1 class="tc">Orange is a free and open source Jekyll theme with a minimal approach</h1>
+      <h1 class="tc">Hi, I'm Borislav, the only developer you'll ever need</h1>
       
         <div class="intro-text">
-          <h3 class="title">Features</h3>
+          <h3 class="title">My Process</h3>
           <div class="row">
             <div class="col-3">
               <div class="feature">
                 <svg class="icon icon-person_outline"><use xlink:href="#icon-person_outline"></use></svg>
-                <h3 class="block">Portfolio showcase</h3>
+                <h3 class="block">Plan</h3>
               </div>
+              <ol>
+              	<li>Interview Client</li>
+              	<li>Establish goal</li>
+              	<li>Create a timeline</li>
+              	<li>Analyse content data</li>
+              </ol>
             </div>
             <div class="col-3">
               <div class="feature">
