--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ type: home
           <div class="row">
             <div class="col-3">
               <div class="feature">
-                <svg class="icon icon-person_outline"><use xlink:href="#icon-person_outline"></use></svg>
+                <svg class="icon icon-plan"><use xlink:href="#icon-person_outline"></use></svg>
                 <h3 class="block">Plan</h3>
               </div>
               <ol>
@@ -27,7 +27,7 @@ type: home
             </div>
             <div class="col-3">
               <div class="feature">
-                <svg class="icon icon-chat_bubble_outline"><use xlink:href="#icon-chat_bubble_outline"></use></svg>
+                <svg class="icon icon-chat_bubble_outline"><use xlink:href="contact"></use></svg>
                 <h3 class="block">Contact form</h3>
               </div>
             </div>
